force-app/main/default/objects/plaunch__JobOpening__c/plaunch__JobOpening__c.object-meta.xml
<CustomObject>
    <description>This custom object allows you to store and manage information about job opportunities posted on LinkedIn and other websites. It enables you to track various aspects of each job opening, including the status, location, salary, and requirements, as well as the hiring manager.</description>
    <label>Job Opening</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Openings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>