force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__Account__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company related to the Job opening</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Openings</relationshipLabel>
    <relationshipName>Job_Openings</relationshipName>
    <type>Lookup</type>
</CustomField>