force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__AccountName__c.field-meta.xml
<CustomField>
    <fullName>plaunch__AccountName__c</fullName>
    <description>Company related to the job opening. This can be useful when there isn&apos;t a relationship with the company name in the job opening and an existing Salesforce Account</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>