force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__Address__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Address__c</fullName>
    <description>The job location address in an unstructured format</description>
    <inlineHelpText>The job location address in an unstructured format</inlineHelpText>
    <label>Location Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>