force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__City__c.field-meta.xml
<CustomField>
    <fullName>plaunch__City__c</fullName>
    <description>Job location city e.g. &quot;New York&quot;</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>