force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__Contact__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact related to the Job opening (e.g. Hiring Manager)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Openings</relationshipLabel>
    <relationshipName>Job_Openings</relationshipName>
    <type>Lookup</type>
</CustomField>