force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__Country__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Country__c</fullName>
    <description>Country name (English name)</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>