force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>plaunch__CountryCode__c</fullName>
    <description>2-letter country code (ISO 3166-1 alpha-2) e.g. DE</description>
    <inlineHelpText>2-letter country code (ISO 3166-1 alpha-2) e.g. DE</inlineHelpText>
    <label>CountryCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>