force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__Description__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Description__c</fullName>
    <description>Description in plain text</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>