force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__DescriptionRichText__c.field-meta.xml
<CustomField>
    <fullName>plaunch__DescriptionRichText__c</fullName>
    <description>Same as the Description but with rich text support when is available.</description>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>