force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__Id__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique ID provided by PipeLaunch</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID provided by PipeLaunch</inlineHelpText>
    <label>ID</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>