force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>plaunch__PostalCode__c</fullName>
    <description>Job location postal code e.g. 2430-615</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>