force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__PostingDate__c.field-meta.xml
<CustomField>
    <fullName>plaunch__PostingDate__c</fullName>
    <description>The date the job was posted, or if it&apos;s no longer available, the date it was posted online</description>
    <inlineHelpText>The date the job was posted, or if it&apos;s no longer available, the date it was posted online</inlineHelpText>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>