force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__RelatedId__c.field-meta.xml
<CustomField>
    <fullName>plaunch__RelatedId__c</fullName>
    <description>The Salesforce ID of a related job opening record (e.g. seven20 job lead)</description>
    <inlineHelpText>The Salesforce ID of a related job opening record (e.g. seven20 job lead)</inlineHelpText>
    <label>Related ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>