force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__State__c.field-meta.xml
<CustomField>
    <fullName>plaunch__State__c</fullName>
    <description>State e.g. Nevada</description>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>