force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__StateCode__c.field-meta.xml
<CustomField>
    <fullName>plaunch__StateCode__c</fullName>
    <description>State code e.g. NY</description>
    <inlineHelpText>State code e.g. NY</inlineHelpText>
    <label>State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>