force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__Title__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Title__c</fullName>
    <description>Job Opening Title, E.g. Full-stack developer (m/f). This value is also used to generate the record Name.</description>
    <inlineHelpText>Job Opening Title, E.g. Full-stack developer (m/f)</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>