force-app/main/default/objects/plaunch__JobOpening__c/fields/plaunch__Url__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Url__c</fullName>
    <description>It could be the LinkedIn™ URL or the website where the job was posted</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>